--- a/src/pages/[lang]/projects/index.astro
+++ b/src/pages/[lang]/projects/index.astro
@@ -2,9 +2,8 @@
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getLangFromUrl, getTranslations } from '@i18n';
-import { listMyInvites } from '@backend/crud';
+import { getMyProfile, listMyInvites } from '@backend/crud';
 import { ProjectsHome } from '@apps/dashboard-projects';
-import { getUser } from '@backend/auth';
 import { listMyProjectsExtended } from '@backend/helpers';
 
 const lang = getLangFromUrl(Astro.url);
@@ -13,7 +12,12 @@ const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 if (!supabase)
   return Astro.redirect(`/${lang}/sign-in`);
 
-const me = await getUser(supabase);
+const me = await getMyProfile(supabase);
+if (me.error || !me.data) {
+  const path = Astro.url.protocol + '//' + Astro.url.host;
+  const error = await fetch(`${path}/500`);
+  return new Response(error.body, { headers: error.headers, status: 500 }); 
+}
 
 const projects = await listMyProjectsExtended(supabase);
 
@@ -29,7 +33,7 @@ if (!projects.data || !invitations.data) {
   <div class="container">
     <ProjectsHome 
       client:only
-      me={me}
+      me={me.data}
       projects={projects.data} 
       invitations={invitations.data}
       i18n={getTranslations(Astro.request, 'dashboard-projects')} />
