--- a/src/pages/[lang]/projects/[slug]/collaboration.astro
+++ b/src/pages/[lang]/projects/[slug]/collaboration.astro
@@ -14,29 +14,28 @@ const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 if (!supabase)
   return Astro.redirect(`/${lang}/sign-in`);
 
-const user = await getMyProfile(supabase);
+const projectId = Astro.params.slug;
 
-if (user.error || !user.data) { 
+const profile = await getMyProfile(supabase);
+if (profile.error || !profile.data) { 
   const error = await fetch(`${Astro.url}/500`);
   return new Response(error.body, { headers: error.headers, status: 500 }); 
 }
-
-const projectId = Astro.params.slug;
 
 const project = await getProjectExtended(supabase, projectId as string);
 
 const invitations = await listPendingInvitations(supabase, projectId as string);
 
-if (project.error || invitations.error || !user) { 
+if (project.error || invitations.error) { 
   const error = await fetch(`${Astro.url}/404`);
   return new Response(error.body, { headers: error.headers, status: 404 }); 
 }
 ---
-<ProjectLayout active="collaboration" user={user.data} project={project.data}>
+<ProjectLayout active="collaboration" user={profile.data} project={project.data}>
   <ProjectCollaboration
     client:load
     i18n={i18n}
-    me={user.data}
+    me={profile.data}
     project={project.data}
     invitations={invitations.data} /> 
 </ProjectLayout>
