--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -125,7 +125,7 @@
   --gray-50: #f6f7f9;
 
   --red-500: #da1e26;
-
+  --orange-500: #ffa929;
   --green-500: #11a011;
 
   /** Global constants **/
