Upload list CSS fix

--- a/src/apps/project-home/upload/UploadTracker.css
+++ b/src/apps/project-home/upload/UploadTracker.css
@@ -29,6 +29,13 @@
   position: relative;
 }
 
+.upload-tracker li .upload-name {
+  overflow: hidden; 
+  padding-right: 40px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 .upload-tracker li .upload-progress {
   color: var(--brighter-blue);
   padding: 0;
