CSS formatting tweak

--- a/src/apps/project-home/ProjectDescription/ProjectDescription.css
+++ b/src/apps/project-home/ProjectDescription/ProjectDescription.css
@@ -16,6 +16,7 @@
   color: var(--font-light);
   max-width: 60ch;
   transition: all 250ms;
+  white-space: pre-line;
 }
 
 .project-description p.editable:hover {
