--- a/src/components/AlertBanner/AlertBanner.css
+++ b/src/components/AlertBanner/AlertBanner.css
@@ -15,11 +15,17 @@
 
 .alert-banner h1 {
   font-size: 1.15em;
-  margin: 0.1em 0;
+  margin: 0.2em 0;
 }
 
 .alert-banner p {
   color: rgba(0, 0, 0, .7);
   font-size: var(--font-small);
+  line-height: 160%;
   margin: 0.1em 0;
+  max-width: 110ch;
+}
+
+.alert-banner p + p {
+  margin-top: 0.8em;
 }
