CSS fix in response to beta-user feedback

--- a/src/components/DocumentCard/DocumentCard.css
+++ b/src/components/DocumentCard/DocumentCard.css
@@ -39,5 +39,13 @@
 .document-card-container h1 a,
 .document-card-container h1 span {
   color: var(--font-dark);
+  display: block;
+  display: -webkit-box;
   font-weight: 400;
+  height: 3.2em;
+  line-clamp: 2;
+  overflow: hidden;
+  overflow-wrap: anywhere;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
