--- a/src/pages/[lang]/projects/[slug]/settings.astro
+++ b/src/pages/[lang]/projects/[slug]/settings.astro
@@ -25,7 +25,7 @@ if (project.error || !project.data) {
   return new Response(error.body, { headers: error.headers, status: 404 }); 
 }
 ---
-<ProjectLayout active="settings" user={profile.data} project={project.data}>
+<ProjectLayout active="Settings" user={profile.data} project={project.data}>
   <h1>Settings</h1>
 </ProjectLayout>
 
