--- a/src/pages/[lang]/projects/[slug]/assignments.astro
+++ b/src/pages/[lang]/projects/[slug]/assignments.astro
@@ -2,10 +2,13 @@
 import ProjectLayout from '@layouts/project/ProjectLayout.astro';
 import { createSupabaseServerClient } from '@backend/supabaseServerClient';
 import { getMyProfile} from '@backend/crud';
-import { getLangFromUrl } from '@i18n';
+import { getLangFromUrl, getTranslations } from '@i18n';
 import { getProjectExtended } from '@backend/helpers';
+import { ProjectAssignments } from '@apps/project-assignments';
 
 const lang = getLangFromUrl(Astro.url);
+
+const i18n = getTranslations(Astro.request, 'project-assignments');
 
 const supabase = await createSupabaseServerClient(Astro.request, Astro.cookies);
 if (!supabase)
@@ -26,11 +29,9 @@ if (project.error || !project.data) {
 }
 ---
 <ProjectLayout active="Assignments" user={profile.data} project={project.data}>
-  <h1>Assignments</h1>
+  <ProjectAssignments
+    client:load
+    i18n={i18n}
+    me={profile.data}
+    project={project.data}>
 </ProjectLayout>
-
-<style>
-  h1 {
-    padding-left: 40px !important;
-  }
-</style>
