Attempting 404 content encoding fix

--- a/src/pages/[lang]/annotate/[context]/[document]/index.astro
+++ b/src/pages/[lang]/annotate/[context]/[document]/index.astro
@@ -25,11 +25,10 @@ if (!contextId || !documentId) {
 
 // Will return empty if this user has no access priviliges
 const document = await getDocumentInContext(supabase, documentId, contextId);
-
 if (document.error || !document.data) {
   // https://javascript.plainenglish.io/return-custom-404-responses-in-astro-b844b0e0146d
   const error = await fetch(`${Astro.url}/404`);
-  return new Response(error.body, { headers: error.headers, status: 404 }); 
+  return new Response(error.body, { headers: error.headers, status: 404, statusText: 'Not Found' }); 
 }
 
 // Compute realtime channel key
