--- a/src/themes/default/dialog/index.css
+++ b/src/themes/default/dialog/index.css
@@ -5,6 +5,15 @@
   position: fixed;
 }
 
+@keyframes dialogEnter {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .dialog-content {
   animation: dialogEnter 150ms cubic-bezier(0.16, 1, 0.3, 1);
   background-color: white;
@@ -26,15 +35,6 @@
   font-size: var(--font-tiny);
 }
 
-@keyframes dialogEnter {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 .dialog-content:focus {
   outline: none;
 }
@@ -48,6 +48,14 @@
   line-height: 160%;
   margin: 2.5em 0;
   font-size: var(--font-tiny);
+}
+
+.dialog-content img.styled-graphic {
+  width: 500px;
+  /* -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0))); */
+  /* mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0)); */
+  -webkit-mask-image: -webkit-radial-gradient(top left, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 80%);
+          mask-image: radial-gradient(at top left, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 80%);
 }
 
 .dialog-close {
