--- a/src/components/AnimatedIcons/AnimatedIcons.css
+++ b/src/components/AnimatedIcons/AnimatedIcons.css
@@ -1,22 +1,17 @@
-@-webkit-keyframes checkmark {
-  0% {
-    stroke-dashoffset: 100px
-  }
-
-  100% {
-    stroke-dashoffset: 200px
-  }
+.animated-icon.check svg polyline {
+  animation: checkmark 0.25s ease-in-out 0.7s backwards
 }
 
-@-ms-keyframes checkmark {
-  0% {
-    stroke-dashoffset: 100px
-  }
-
-  100% {
-    stroke-dashoffset: 200px
-  }
+.animated-icon.check svg circle.outline {
+  stroke: var(--green-500);
+  stroke-width: 6px;
+  animation: checkmark-circle-outline 0.6s ease-in-out backwards;
 }
+
+.animated-icon.check svg circle.fill {
+  fill: var(--green-500);
+  animation: checkmark-circle-fill 0.6s ease-in-out 0.7s backwards;
+} 
 
 @keyframes checkmark {
   0% {
@@ -28,58 +23,22 @@
   }
 }
 
-@-webkit-keyframes checkmark-circle {
+@keyframes checkmark-circle-outline {
   0% {
     stroke-dashoffset: 480px
   }
 
   100% {
     stroke-dashoffset: 960px;
-
   }
 }
 
-@-ms-keyframes checkmark-circle {
+@keyframes checkmark-circle-fill {
   0% {
-    stroke-dashoffset: 240px
+    opacity: 0;
   }
 
   100% {
-    stroke-dashoffset: 480px
+    opacity: 1;
   }
-}
-
-@keyframes checkmark-circle {
-  0% {
-    stroke-dashoffset: 480px
-  }
-
-  100% {
-    stroke-dashoffset: 960px
-  }
-}
-
-@keyframes colored-circle {
-  0% {
-    opacity: 0
-  }
-
-  100% {
-    opacity: 100
-  }
-}
-
-.animated-icon.success svg polyline {
-  -webkit-animation: checkmark 0.25s ease-in-out 0.7s backwards;
-  animation: checkmark 0.25s ease-in-out 0.7s backwards
-}
-
-.animated-icon.success svg circle {
-  -webkit-animation: checkmark-circle 0.6s ease-in-out backwards;
-  animation: checkmark-circle 0.6s ease-in-out backwards;
-}
-
-.animated-icon.success svg circle#colored {
-  -webkit-animation: colored-circle 0.6s ease-in-out 0.7s backwards;
-  animation: colored-circle 0.6s ease-in-out 0.7s backwards;
 }
