--- a/src/themes/default/button/index.css
+++ b/src/themes/default/button/index.css
@@ -22,6 +22,7 @@ button, a[href].button {
   font-weight: 400;
   justify-content: center;
   line-height: 160%;
+  min-width: 80px;
   outline: none;
   padding: 10px 24px;
   position: relative;
