--- a/src/themes/default/index.css
+++ b/src/themes/default/index.css
@@ -193,6 +193,7 @@ h1 {
   font-size: 1.6em;
   font-weight: 600;
   letter-spacing: 0.02ch;
+  line-height: 140%;
   margin: 0.8em 0;
   padding: 0;
 }
