--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -48,6 +48,7 @@
   border-radius: var(--border-radius);
   box-shadow: none;
   height: 38px;
+  min-width: auto;
   outline: none;
   padding: 0;
   width: 38px;
