--- a/src/themes/default/button/index.css
+++ b/src/themes/default/button/index.css
@@ -109,6 +109,7 @@ button.icon-only {
   border-radius: 50%;
   display: inline-flex;
   justify-content: center;
+  min-width: auto;
 }
 
 button.icon-only svg {
