Assignments wizard: added editable title, completion hints, verification step

--- a/src/apps/project-assignments/Wizard/AssignmentWizard.css
+++ b/src/apps/project-assignments/Wizard/AssignmentWizard.css
@@ -1,6 +1,16 @@
 .dialog-content.assignment-wizard {
+  background-color: var(--gray-100);
   max-width: 780px;
   padding: 0;
+}
+
+.dialog-content.assignment-wizard h1 {
+  display: inline-block;
+  margin: 30px;
+}
+
+.assignment-wizard .tabs-content {
+  background-color: #fff;
 }
 
 .assignment-wizard .tabs-content .row {
@@ -35,4 +45,24 @@
   flex-direction: row;
   justify-content: flex-end;
   padding: 0 30px 30px 30px;
+}
+
+.assignment-wizard .tabs-content p.hint {
+  font-size: var(--font-tiny);
+  margin: 0.5em 1.1em;
+}
+
+.assignment-wizard .tabs-content p.hint svg {
+  padding-right: 0.1em;
+  position: relative;
+  top: -1px;
+  vertical-align: text-bottom;
+}
+
+.assignment-wizard .tabs-content p.hint.ok {
+  color: var(--green-500);
+}
+
+.assignment-wizard .tabs-content p.hint.warn {
+  color: var(--red-500);
 }
