--- a/src/themes/default/annotation/index.css
+++ b/src/themes/default/annotation/index.css
@@ -7,6 +7,13 @@
   width: 100%;
 }
 
+.anno-desktop-left {
+  left: 0;
+  position: absolute;
+  top: 0;
+  z-index: 2;
+}
+
 .anno-desktop-right {
   display: flex;
   flex-direction: row;
