--- a/src/components/Presence/PresenceViewMoreButton.css
+++ b/src/components/Presence/PresenceViewMoreButton.css
@@ -8,4 +8,30 @@
     padding: 0 12px;
     width: auto;
     margin-right: 8px;
+    pointer-events: all;
+}
+
+.presence-view-more-content {
+    min-width: 220px;
+    background-color: white;
+    border-radius: 6px;
+    padding: 5px;
+    box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+    animation-duration: 400ms;
+    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    will-change: transform, opacity;  
+    cursor: default;
+}
+
+.presence-view-more-item {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    border-style: none;
+    border-radius: 5px;
+}
+
+.presence-view-more-item[data-highlighted] {
+    border-style: none;
+    background-color: rgb(226, 226, 226)
 }
