--- a/src/apps/project-assignments/Wizard/Progress/Progress.css
+++ b/src/apps/project-assignments/Wizard/Progress/Progress.css
@@ -1,3 +1,19 @@
 .creating-assignment {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  font-size: var(--font-small);
+  gap: 1em;
+  justify-content: center;
+  min-height: 240px;
   padding: 30px;
+}
+
+.creating-assignment .spinner {
+  color: var(--bright-blue);
+}
+
+.creating-assignment p {
+  max-width: 50ch;
+  text-align: center;
 }
