--- a/src/apps/project-assignments/Wizard/Verify/Verify.css
+++ b/src/apps/project-assignments/Wizard/Verify/Verify.css
@@ -6,10 +6,16 @@
   padding: 0;
 }
 
-.tab-verify ol svg {
-  padding-right: 1em;
+.tab-verify li {
+  padding: 0em 0 0.6em 1.8em;
   position: relative;
-  top: -1px;
+}
+
+.tab-verify ol svg {
+  left: 0;
+  padding-right: 1em;
+  position: absolute;
+  top: 0.4em;
   vertical-align: text-bottom;
 }
 
