--- a/src/themes/default/tabs/index.css
+++ b/src/themes/default/tabs/index.css
@@ -1,4 +1,5 @@
 .tabs-list {
+  background-color: #fff;
   border-bottom: 1px solid var(--gray-300);
   flex-shrink: 0;
   font-size: var(--font-small);
