--- a/src/pages/[lang]/reset-password.astro
+++ b/src/pages/[lang]/reset-password.astro
@@ -1,12 +1,12 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
-import { Logout } from '@apps/auth-logout';
+import { ResetPassword } from '@apps/auth-reset-password';
 import { getTranslations } from '@i18n';
 ---
-<BaseLayout title="Recogito | Logout">
+<BaseLayout title="Recogito | Reset Password">
   <div class="container">
     <div class="column">
-      <Logout i18n={getTranslations(Astro.request, 'error')} client:load />
+      <ResetPassword i18n={getTranslations(Astro.request, 'auth-reset-password')} client:load />
     </div>
   </div>
 </BaseLayout>
