TEI: fist proof of concept

--- a/src/pages/[lang]/annotate/[context]/[document]/index.astro
+++ b/src/pages/[lang]/annotate/[context]/[document]/index.astro
@@ -46,6 +46,8 @@ let viewer;
 
 if (document.data.content_type === 'text/plain') {
   viewer = 'TEXT';
+} else if (document.data.content_type === 'text/xml') {
+  viewer = 'TEI';
 } else if (document.data.meta_data?.protocol === 'IIIF_IMAGE') {
   viewer ='OPENSEADRAGON';
 } else {
@@ -66,9 +68,11 @@ if (document.data.content_type === 'text/plain') {
   ) : (
     <div class="container text">
       <main id="annotatable">
-        <PlainText
-          document={document.data} 
-          supabase={supabase} />
+        {viewer === 'TEXT' && (
+          <PlainText
+            document={document.data} 
+            supabase={supabase} />
+        )}
       </main>
 
       <TextAnnotationDesktop 
