--- a/src/components/Annotation/TagsWidget/MoreTags/MoreTags.css
+++ b/src/components/Annotation/TagsWidget/MoreTags/MoreTags.css
@@ -1,10 +1,9 @@
-.annotation-taglist .more-tags-trigger {
+.annotation-tagswidget .more-tags-trigger {
   border-radius: 3px;
   font-size: 11px;
   font-weight: 500;
   padding: 2px 4px;
 }
-
 
 .popover-content.more-tags-popover ul {
   background-color: #fff;
