--- a/src/components/Annotation/TagsWidget/AddTagAction/AddTagAction.css
+++ b/src/components/Annotation/TagsWidget/AddTagAction/AddTagAction.css
@@ -7,3 +7,18 @@
 .annotation-tagswidget .add-tag svg {
   color: var(--gray-600);
 }
+
+.popover-content.add-tag-popover {
+  line-height: 100%;
+  width: auto;
+}
+.popover-content.add-tag-popover form.annotation-tag-input-form input {
+  background-color: #fff;
+  padding: 10px;
+  position: relative;
+  z-index: 1;
+}
+
+.popover-content.add-tag-popover form.annotation-tag-input-form input:focus {
+  background-color: #fff;
+}
