--- a/src/layouts/project/ProjectSidebar.css
+++ b/src/layouts/project/ProjectSidebar.css
@@ -111,6 +111,11 @@
   transition: background-color 180ms ease-in-out;
 }
 
+.project-sidebar-actions button .avatar {
+  height: 28px;
+  width: 28px;
+}
+
 .project-sidebar-actions button:hover {
   background-color: rgba(255, 255, 255, 0.25);
   box-shadow: none;
