--- a/src/layouts/project/ProjectLayout.astro
+++ b/src/layouts/project/ProjectLayout.astro
@@ -2,7 +2,7 @@
 import BaseLayout from '@layouts/BaseLayout.astro';
 import { ProjectSidebar } from './ProjectSidebar';
 import { getLangFromUrl, getTranslations } from '@i18n';
-import type { ExtendedProjectData, MyProfile } from 'src/Types';
+import type { ExtendedAssignmentData, ExtendedProjectData, MyProfile } from 'src/Types';
 
 export interface Props {
 
@@ -10,11 +10,13 @@ export interface Props {
 
   project: ExtendedProjectData;
 
+  assignment?: ExtendedAssignmentData;
+
   user: MyProfile;
 
 }
 
-const { active, project, user } = Astro.props;
+const { active, assignment, project, user } = Astro.props;
 
 const lang = getLangFromUrl(Astro.url);
 
@@ -46,8 +48,18 @@ const cookie = Astro.cookies.get('x-project-sidebar-collapsed');
           </li>
 
           <li>
-            <a>{i18n.t[active]}</a>
+            {assignment ? (
+              <a href={`/${lang}/projects/${project.id}/assignments`}>{i18n.t['Assignments']}</a>
+            ): (
+              <a>{i18n.t[active]}</a>
+            )}
           </li>
+
+          {assignment && (
+            <li>
+              <a>{assignment.name}</a>
+            </li>
+          )}
         </ol>
       </nav>
     </header>
