--- a/src/components/Annotation/Comment/Comment.css
+++ b/src/components/Annotation/Comment/Comment.css
@@ -49,3 +49,7 @@ li:first-child > .annotation-comment {
   right: 5px;
   top: 12px;
 }
+
+.admin-override-alert .dialog-footer {
+  justify-content: flex-end;
+}
