--- a/src/apps/project-assignment-details/AssignmentDetails.css
+++ b/src/apps/project-assignment-details/AssignmentDetails.css
@@ -3,6 +3,21 @@
   width: 100%;
 }
 
+.project-assignment-details .project-assignment-team ul {
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.project-assignment-details .project-assignment-team li {
+  display: inline-block;
+}
+
+.project-assignment-details .project-assignment-team li + li {
+  margin-left: -7px;
+}
+
 .project-assignment-details .project-assignment-document-grid {
   display: grid;
   gap: 1rem;
