--- a/src/pages/[lang]/projects/[project]/addons.astro
+++ b/src/pages/[lang]/projects/[project]/addons.astro
@@ -22,7 +22,11 @@ if (profile.error || !profile.data) {
 const project = await getProjectExtended(supabase, projectId as string);
 if (project.error || !project.data) { 
   const error = await fetch(`${Astro.url}/404`);
-  return new Response(error.body, { headers: error.headers, status: 404 }); 
+  return new Response(error.body, { 
+    headers: { 'Content-Type': 'text/html;charset=utf-8' },
+    status: 404, 
+    statusText: 'Not Found' 
+  }); 
 }
 ---
 <ProjectLayout active="Add Ons" user={profile.data} project={project.data}>
