--- a/src/pages/[lang]/projects/[project]/assignments/[assignment]/index.astro
+++ b/src/pages/[lang]/projects/[project]/assignments/[assignment]/index.astro
@@ -23,7 +23,11 @@ const projectId = Astro.params.project!;
 const project = await getProjectExtended(supabase, projectId as string);
 if (project.error || !project.data) { 
   const error = await fetch(`${Astro.url}/404`);
-  return new Response(error.body, { headers: error.headers, status: 404 }); 
+  return new Response(error.body, { 
+    headers: { 'Content-Type': 'text/html;charset=utf-8' },
+    status: 404, 
+    statusText: 'Not Found' 
+   }); 
 }
 
 const assignmentId = Astro.params.assignment!;
@@ -31,7 +35,11 @@ const assignmentId = Astro.params.assignment!;
 const assignment = await getAssignment(supabase, assignmentId);
 if (assignment.error || !assignment.data) {
   const error = await fetch(`${Astro.url}/404`);
-  return new Response(error.body, { headers: error.headers, status: 404 }); 
+  return new Response(error.body, { 
+    headers: { 'Content-Type': 'text/html;charset=utf-8' },
+    status: 404, 
+    statusText: 'Not Found' 
+   }); 
 }
 
 const i18n = getTranslations(Astro.request, 'project-assignment-details');
