--- a/src/themes/default/select/index.css
+++ b/src/themes/default/select/index.css
@@ -1,6 +1,7 @@
 .select-trigger {
   box-shadow: inset 0 0 0 150px rgba(0, 0, 0, 0);
   font-size: var(--font-tiny);
+  justify-content: space-between;
   min-width: 120px;
   padding: 4px 8px;
   font-weight: 400;
